--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
 	<div style="height: 100px"></div>
 
 	<div class="fluid-container footer">
-		<small>All rights reserved.</small>
+		<small>All rights reserved © 2020</small>
 	</div>
 </body>
 
