--- a/templates/orgProfile.html
+++ b/templates/orgProfile.html
@@ -2,7 +2,7 @@
 {% block title %}Organization Profile{% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid JumboHeaderProfile">
+<div class="jumbotron jumbotron-fluid bgColorSchemeRed colorSchemeWhite">
 	<div class="container">
 		<h2 class="display-1">Red Crescent</h2>
         <p class="lead" id=intro>This is your information. It is what donors see when they view your information.</p>
@@ -10,7 +10,7 @@
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
-        <h3 class="card-header font-weight-bold text-center">Red Crescent</h3>
+        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Organization Profile</h3>
         <div class="card-body">
             <h5 class="text-muted text-left pt-3">Organization Information</h5>
             <hr />
