Final GUI Update 2/2

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -107,7 +107,7 @@ have a background size like that*/
 }
 
 .bgColorSchemeRed {
-  background-color: #EC3035
+  background-color: #b22222;
 }
 
 .bgColorSchemeBrown {
