--- a/templates/register.html
+++ b/templates/register.html
@@ -287,7 +287,7 @@
 		{% else %}
 		<div class="row align-items-center">
 			<div class="col">
-				<p class="text-center display-4">Choose your Account Type</p>
+				<p class="text-center display-4">Choose Your Account Type</p>
 				<hr />
 			</div>
 		</div>
