--- a/templates/items.html
+++ b/templates/items.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid colorSchemeDarkBlue bgColorSchemePink">
 	<div class="container">
-		<h2 class="display-1">Donated Item</h2>
+		<h2 class="display-1">Donated Items</h2>
         <p class="lead" id=intro>View your donated items.</p>
 	</div>
 </div>
