--- a/templates/register.html
+++ b/templates/register.html
@@ -2,163 +2,170 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<div class="container pt-5" id="registration">
+
+<!--Card BEGIN-->
+<div class="container pb-5 center-block">
 	{% if type == 'user' %}
-	<div class="row align-items-center">
+	<div class="row align-items-center mt-3">
 		<div class="col">
 			<p class="text-center display-4">User Registration</p>
 			<hr />
 		</div>
 	</div>
-	<div class="row justify-content-center align-items-center">
-		<form>
-			<p><em>We will never share this information with anyone!</em></p>
-			<h5>User Information</h5>
-			<hr />
-			<div class="form-row">
-				<!-- First Name -->
-				<div class="col-md-6 mb-3">
-					<label for="validationTooltip01">First name</label>
-					<input type="text" class="form-control" id="validationTooltip01" placeholder="John" required>
-					<div class="valid-tooltip">Looks good!</div>
+	<div class="card mb-3 bg-light">
+		<div class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Registration Form</div>
+		<div class="card-body">
+			<form>
+				<h5>User Information</h5>
+				<p><em>We will never share this information with anyone!</em></p>
+				<hr />
+				<div class="form-row">
+					<!-- First Name -->
+					<div class="col-md-6 mb-3">
+						<label for="validationTooltip01">First name</label>
+						<input type="text" class="form-control" id="validationTooltip01" placeholder="John" required>
+						<div class="valid-tooltip">Looks good!</div>
+					</div>
+					<!-- Last Name -->
+					<div class="col-md-6 mb-3">
+						<label for="validationTooltip02">Last name</label>
+						<input type="text" class="form-control" id="validationTooltip02" placeholder="Smith" required>
+						<div class="valid-tooltip">Looks good!</div>
+					</div>
+	
 				</div>
-				<!-- Last Name -->
-				<div class="col-md-6 mb-3">
-					<label for="validationTooltip02">Last name</label>
-					<input type="text" class="form-control" id="validationTooltip02" placeholder="Smith" required>
-					<div class="valid-tooltip">Looks good!</div>
+				<!--Birth date-->
+				<div class="form-group">
+					<label for="Birthdate">Date of Birth</label>
+					<input type="date" class="form-control" id="exampleFormControlInput1" placeholder="mm/dd/yyyy">
 				</div>
-
-			</div>
-			<!--Birth date-->
-			<div class="form-group">
-				<label for="Birthdate">Date of Birth</label>
-				<input type="date" class="form-control" id="exampleFormControlInput1" placeholder="mm/dd/yyyy">
-			</div>
-			<!-- Check box - confirm I am 18+ -->
-			<div class="form-group">
-				<div class="form-check">
-					<input class="form-check-input" type="checkbox" id="gridCheck" required>
-					<label class="form-check-label" for="gridCheck">
-						I promise that I am 18 years old or older!
-					</label>
+				<!-- Check box - confirm I am 18+ -->
+				<div class="form-group">
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" id="gridCheck" required>
+						<label class="form-check-label" for="gridCheck">
+							I promise that I am 18 years old or older!
+						</label>
+					</div>
 				</div>
-			</div>
-			<h5>Contact Information</h5>
-			<hr />
-			<!-- Address -->
-			<div class="form-row">
-				<!-- City -->
-				<div class="col-md-4 mb-3">
-					<label for="validationTooltip03">City</label>
-					<input type="text" class="form-control" id="validationTooltip03" placeholder="Neverland" required>
-					<div class="invalid-tooltip">Please provide a valid city.</div>
+				<h5>Contact Information</h5>
+				<hr />
+				<!-- Address -->
+				<div class="form-row">
+					<!-- City -->
+					<div class="col-md-4 mb-3">
+						<label for="validationTooltip03">City</label>
+						<input type="text" class="form-control" id="validationTooltip03" placeholder="Neverland" required>
+						<div class="invalid-tooltip">Please provide a valid city.</div>
+					</div>
+					<!--Emirate Drop-Down-->
+					<div class="col-md-4 mb-3">
+						<label for="validationTooltip04">Emirate</label>
+						<select class="custom-select" id="validationTooltip04" required>
+							<option selected disabled value="">Choose...</option>
+							<option>Abu Dhabi</option>
+							<option>Dubai</option>
+							<option>Sharjah</option>
+							<option>Ajman</option>
+							<option>Fujairah</option>
+							<option>Ras al Khaimah</option>
+							<option>Umm al Quwain</option>
+						</select>
+						<div class="invalid-tooltip">Please select a valid Emirate.</div>
+					</div>
+	
+					<!--PO BOX-->
+					<div class="col-md-4 mb-3">
+						<label for="PO-BOX">PO Box</label>
+						<input type="text" class="form-control" id="PO-BOX" placeholder="xxxxx">
+					</div>
 				</div>
-				<!--Emirate Drop-Down-->
-				<div class="col-md-4 mb-3">
-					<label for="validationTooltip04">Emirate</label>
-					<select class="custom-select" id="validationTooltip04" required>
-						<option selected disabled value="">Choose...</option>
-						<option>Abu Dhabi</option>
-						<option>Dubai</option>
-						<option>Sharjah</option>
-						<option>Ajman</option>
-						<option>Fujairah</option>
-						<option>Ras al Khaimah</option>
-						<option>Umm al Quwain</option>
-					</select>
-					<div class="invalid-tooltip">Please select a valid Emirate.</div>
+				<!--2 complete address lines-->
+				<div class="form-group">
+					<label for="Address1">Address #1</label>
+					<input type="text" class="form-control" placeholder="Street 1, Building 3, Apartment 55" required>
 				</div>
-
-				<!--PO BOX-->
-				<div class="col-md-4 mb-3">
-					<label for="PO-BOX">PO Box</label>
-					<input type="text" class="form-control" id="PO-BOX" placeholder="xxxxx">
+				<div class="form-group">
+					<label for="Address2">Address #2</label>
+					<input type="text" class="form-control" placeholder="Behind AUS" required>
 				</div>
-			</div>
-			<!--2 complete address lines-->
-			<div class="form-group">
-				<label for="Address1">Address #1</label>
-				<input type="text" class="form-control" placeholder="Street 1, Building 3, Apartment 55" required>
-			</div>
-			<div class="form-group">
-				<label for="Address2">Address #2</label>
-				<input type="text" class="form-control" placeholder="Behind AUS" required>
-			</div>
-
-			<!-- Phone number -->
-			<div class="form-group">
-				<label for="validationTooltip05">Phone Number</label>
-				<input type="tel" class="form-control" id="validationTooltip05" placeholder="05x xxxxxxx" required>
-			</div>
-			<!-- Email -->
-			<div class="form-group">
-				<label for="validationTooltip06">Email</label>
-				<input type="email" class="form-control" id="validationTooltip06" placeholder="johnsmith@email.com"
-					required>
-			</div>
-			<!--Password & Confirm Password-->
-			<div class="form-row">
-				<!--Password-->
-				<div class="col-md-6 mb-3">
-					<label for="validationTooltip07">Password</label>
-					<input type="password" class="form-control" id="validationTooltip07" required>
+	
+				<!-- Phone number -->
+				<div class="form-group">
+					<label for="validationTooltip05">Phone Number</label>
+					<input type="tel" class="form-control" id="validationTooltip05" placeholder="05x xxxxxxx" required>
 				</div>
-				<!--Confrim Password-->
-				<div class="col-md-6 mb-3">
-					<label for="validationTooltip08">Confirm Password</label>
-					<input type="password" class="form-control" id="validationTooltip08" required>
+				<!-- Email -->
+				<div class="form-group">
+					<label for="validationTooltip06">Email</label>
+					<input type="email" class="form-control" id="validationTooltip06" placeholder="johnsmith@email.com"
+						required>
 				</div>
-			</div>
-			<!-- Check box - terms and conditions -->
-			<div class="form-group">
-				<div class="form-check">
-					<input class="form-check-input" type="checkbox" id="gridCheck" required>
-					<label class="form-check-label" for="gridCheck">
-						I have read and understood the <a href data-target="#termsconditions" data-toggle="modal">terms
-							and conditions</a>.
-					</label>
+				<!--Password & Confirm Password-->
+				<div class="form-row">
+					<!--Password-->
+					<div class="col-md-6 mb-3">
+						<label for="validationTooltip07">Password</label>
+						<input type="password" class="form-control" id="validationTooltip07" required>
+					</div>
+					<!--Confrim Password-->
+					<div class="col-md-6 mb-3">
+						<label for="validationTooltip08">Confirm Password</label>
+						<input type="password" class="form-control" id="validationTooltip08" required>
+					</div>
 				</div>
-			</div>
-			<!-- Terms and Conditions Modal -->
-			<div class="modal fade" id="termsconditions" tabindex="-1" role="dialog" aria-labelledby="termsconditions"
-				aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="termsconditions">Terms and Conditions</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in orci ut urna mattis
-							auctor. Proin porta justo vitae gravida auctor. Vivamus ut sapien at metus varius mattis in
-							non nibh. Proin feugiat fermentum quam vel luctus. In eu ullamcorper diam. Ut sem lorem,
-							viverra et est ac, convallis interdum arcu. Nullam tempus ultrices ante. Praesent metus
-							turpis, imperdiet vel venenatis ut, feugiat id ligula. Sed id risus neque.
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<!-- Check box - terms and conditions -->
+				<div class="form-group">
+					<div class="form-check">
+						<input class="form-check-input" type="checkbox" id="gridCheck" required>
+						<label class="form-check-label" for="gridCheck">
+							I have read and understood the <a href data-target="#termsconditions" data-toggle="modal">terms
+								and conditions</a>.
+						</label>
+					</div>
+				</div>
+				<!-- Terms and Conditions Modal -->
+				<div class="modal fade" id="termsconditions" tabindex="-1" role="dialog" aria-labelledby="termsconditions"
+					aria-hidden="true">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="termsconditions">Terms and Conditions</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in orci ut urna mattis
+								auctor. Proin porta justo vitae gravida auctor. Vivamus ut sapien at metus varius mattis in
+								non nibh. Proin feugiat fermentum quam vel luctus. In eu ullamcorper diam. Ut sem lorem,
+								viverra et est ac, convallis interdum arcu. Nullam tempus ultrices ante. Praesent metus
+								turpis, imperdiet vel venenatis ut, feugiat id ligula. Sed id risus neque.
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-		</form>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
+		</div>
 	</div>
+
+<!--Card END-->
 	<!--Organization Form-->
 	{% elif type == 'org' %}
-	<div class="row align-items-center">
+	<div class="row align-items-center mt-3">
 		<div class="col">
 			<p class="text-center display-4">Organization Request Access</p>
 			<hr />
 		</div>
 	</div>
-	<div class="row justify-content-center align-items-center">
-		<div class="row justify-content-center align-items-center">
+	<div class="card mb-3 bg-light">
+		<div class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Registration Form</div>
+		<div class="card-body">
 			<form>
-				<p><em>We will never share this information with anyone!</em></p>
 				<!--Organization Name-->
 				<h5>Organization Information</h5>
 				<hr />
@@ -284,6 +291,7 @@
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
 		</div>
+	</div>
 		{% else %}
 		<div class="row align-items-center">
 			<div class="col">
@@ -302,6 +310,6 @@
 			</div>
 		</div>
 		{% endif %}
-	</div>
+</div>
 
 	{% endblock %}
