--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -2,7 +2,7 @@
 {% block title %}User Profile{% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid JumboHeaderProfile">
+<div class="jumbotron jumbotron-fluid bgColorSchemeBrown">
 	<div class="container">
 		<h2 class="display-1">Hello, Elon!</h2>
         <p class="lead" id=intro>This is your profile page. Organizations can view this page.</p>
