--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 		<!-- TODO: Actual Form -->
 		<form>
 			<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
+				<label for="exampleInputEmail1">Email</label>
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
 					else.</small>
@@ -38,7 +38,7 @@
 		<!-- TODO: Actual Form -->
 		<form>
 			<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
+				<label for="exampleInputEmail1">Email</label>
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 				<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
 					else.</small>
