--- a/templates/viewUser.html
+++ b/templates/viewUser.html
@@ -2,7 +2,7 @@
 {% block title %}view User{% endblock %}
 
 {% block content %}
-<div class="jumbotron jumbotron-fluid JumboHeaderProfile">
+<div class="jumbotron jumbotron-fluid bgColorSchemeBrown">
 	<div class="container">
 		<h2 class="display-1">User Information</h2>
         <p class="lead" id=intro>You are viewing <strong> Elon Musk's</strong> details.</p>
@@ -10,7 +10,7 @@
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
-        <h3 class="card-header font-weight-bold text-center">Elon Musk</h3>
+        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Elon Musk</h3>
         <div class="card-body">
             <h5 class="text-muted text-left">User Information</h5>
             <hr />
