--- a/templates/orgs.html
+++ b/templates/orgs.html
@@ -17,7 +17,7 @@
 					<hr />
 				<div class="card-body">
 					<h5 class="card-title">UAE Red Crescent</h5>
-					<a class="btn btn-primary mt-3" href="#">View Profile</a>
+					<a class="btn btn-primary mt-3" href="/viewOrg">View Profile</a>
 				</div>
 				<div class="card-footer">
 					<p class="card-text"><small class="text-muted">Member since June, 2019</small></p>
