--- a/templates/viewOrg.html
+++ b/templates/viewOrg.html
@@ -10,7 +10,7 @@
 </div>
 <div class="container pb-5 center-block">
     <div class="card mb-3 bg-light">
-        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Red Crescent</h3>
+        <h3 class="card-header font-weight-bold text-center colorSchemeWhite bgColorSchemeDarkBlue mb-3">Organization Profile</h3>
         <div class="card-body">
             <h5 class="text-muted text-left pt-3">Organization Information</h5>
             <hr />
